huge code clean up with sonarlite